--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,74 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-329.5KB/s(Youtube:不良林), server: 106.wgong2.xyz, port: 11223, type: vmess, uuid: 67d0d0b2-e1fe-3213-a591-90b01419bc66, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇩🇪 德国-216.5KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-200.8KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-228.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-14.53MB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
+  - {name: 🇺🇸 美国-524.4KB/s(Youtube:不良林), server: 101.wgong2.xyz, port: 52201, type: vmess, uuid: 67d0d0b2-e1fe-3213-a591-90b01419bc66, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-208.3KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-329.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-329.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-329.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-329.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-200.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-329.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-329.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-329.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -88,10 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
-      - 🇭🇰 香港-329.5KB/s(Youtube:不良林)
       - 🇩🇪 德国-216.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-200.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-228.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-524.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-208.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
