--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-371.3KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-150.0KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
-  - {name: 🇳🇱 荷兰-542.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇩🇪 德国-316.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-520.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 167.88.61.60, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-2.08MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-462.1KB/s(Youtube:不良林), server: aicoo6du.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: aicoo6du.com}}
-  - {name: 新西兰-1.12MB/s(Youtube:不良林), server: 103.62.49.141, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇳🇱 荷兰-1.21MB/s(Youtube:不良林), server: 213.183.59.214, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 新西兰-736.2KB/s(Youtube:不良林), server: 103.62.49.141, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-983.8KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 捷克-409.2KB/s(Youtube:不良林), server: ce.rutracker-cn.com, port: 443, type: trojan, password: 5y8y3CwxRVYhyfSY, sni: ce.rutracker-cn.com, skip-cert-verify: true}
+  - {name: 新西兰-828.9KB/s(Youtube:不良林), server: 103.62.49.141, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-931.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: 38.143.66.99, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-6.19MB/s(Youtube:不良林), server: 116.129.254.65, port: 63086, type: vmess, uuid: d9ac2f26-cc36-3faf-80c4-e2345cb25680, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 104.160.43.43, port: 443, type: vmess, uuid: a307a6f7-b697-400e-bc7e-e6356de877c2, alterId: 60, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /asdfaszzsdfa, ws-headers: {Host: 104.160.43.43}}
+  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-316.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-520.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.1KB/s(Youtube:不良林)
-      - 新西兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
+      - 新西兰-736.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
+      - 捷克-409.2KB/s(Youtube:不良林)
+      - 新西兰-828.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-316.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-520.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.1KB/s(Youtube:不良林)
-      - 新西兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
+      - 新西兰-736.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
+      - 捷克-409.2KB/s(Youtube:不良林)
+      - 新西兰-828.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-316.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-520.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.1KB/s(Youtube:不良林)
-      - 新西兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
+      - 新西兰-736.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
+      - 捷克-409.2KB/s(Youtube:不良林)
+      - 新西兰-828.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-371.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-316.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-520.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.1KB/s(Youtube:不良林)
-      - 新西兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
+      - 新西兰-736.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
+      - 捷克-409.2KB/s(Youtube:不良林)
+      - 新西兰-828.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-316.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-520.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.1KB/s(Youtube:不良林)
-      - 新西兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
+      - 新西兰-736.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
+      - 捷克-409.2KB/s(Youtube:不良林)
+      - 新西兰-828.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-316.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-520.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.1KB/s(Youtube:不良林)
-      - 新西兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
+      - 新西兰-736.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
+      - 捷克-409.2KB/s(Youtube:不良林)
+      - 新西兰-828.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-150.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-316.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-520.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.08MB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.1KB/s(Youtube:不良林)
-      - 新西兰-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.21MB/s(Youtube:不良林)
+      - 新西兰-736.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-983.8KB/s(Youtube:不良林)
+      - 捷克-409.2KB/s(Youtube:不良林)
+      - 新西兰-828.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-931.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
